проименовал классы модальных окон

--- a/index.html
+++ b/index.html
@@ -48,15 +48,15 @@
 		
 		<section class="main-promo">
 		    <ul class="main-promo-list">
-                <li class="main-promo-item">				    
+                <li class="main-promo-item promo-materials">				    
 				    <h2>Материалы</h2>
 					<a href="blank.html">на любой вкус</a>					
 				</li>
-		        <li class="main-promo-item">				    
+		        <li class="main-promo-item promo-instrument">				    
 				    <h2>Инструмент</h2>
 					<a href="blank.html">на все случаи</a>					
 				</li>
-				<li class="main-promo-item">				    
+				<li class="main-promo-item promo-technic">				    
 				    <h2>Техника</h2>
 					<a href="blank.html">для стройки</a>					
 				</li>
@@ -66,7 +66,7 @@
                     <div class="main-promo-slide">
 					    <h2>..........</h2>
 					    <p>............</p>
-					    <a href="catalog.html">открыть каталог</a>
+					    <a class="link-button" href="catalog.html">открыть каталог</a>
 						<img src="img/1.svg" width="620" height="266" alt="...............">
 					</div>
 
@@ -79,11 +79,11 @@
 						<img src="img/2.svg" width="620" height="266" alt="Фото рабочего с перфоратором">
 					</div>	
 				</li>
-				<li class="main-promo-item">				    
+				<li class="main-promo-item promo-sale">				    
 				    <h2>Скидки 50%</h2>
 					<a href="blank.html">на 350 товаров</a>					
 				</li>
-				<li class="main-promo-item">				    
+				<li class="main-promo-item promo-delivery">				    
 				    <h2>Доставка</h2>
 					<a href="blank.html">бесплатно</a>					
 				</li>
@@ -93,7 +93,7 @@
 		<section class="main-product">
 			<div class="main-product-header">
 				<h2>Популярные товары:</h2>
-				<a href="blank.html">все популярные товары</a>
+				<a class="link-button" href="blank.html">все популярные товары</a>
 			</div>
 			<ul class="main-product-list">
 				<li class="main-product-item">
@@ -103,7 +103,7 @@
 						<h3>Перфоратор BOSCH BFG 9000</h3>
 					</a>
 						<span>32500 Р.</span>
-						<button type="button">25500 Р.</button>					
+						<button class="button-product" type="button">25500 Р.</button>					
 				</li>
 				<li class="main-product-item">
 					<a class="main-product-item-link" href="blank.html">
@@ -112,7 +112,7 @@
 						<h3>Перфоратор BOSCH BFG 3000</h3>
 					</a>
 						<span>22500 Р.</span>
-						<button type="button">15500 Р.</button>					
+						<button class="button-product" type="button">15500 Р.</button>					
 				</li>
 				<li class="main-product-item">
 					<a class="main-product-item-link" href="blank.html">
@@ -121,7 +121,7 @@
 						<h3>Перфоратор BOSCH BFG 6000</h3>
 					</a>
 						<span>30500 Р.</span>
-						<button type="button">25500 Р.</button>					
+						<button class="button-product" type="button">25500 Р.</button>					
 				</li>
 				<li class="main-product-item">
 					<a class="main-product-item-link" href="blank.html">
@@ -130,7 +130,7 @@
 						<h3>Перфоратор BOSCH BFG 2000</h3>
 					</a>
 						<span></span>
-						<button type="button">12500 Р.</button>					
+						<button class="button-product" type="button">12500 Р.</button>					
 				</li>
 			</ul>
 		</section>
@@ -138,7 +138,7 @@
 		<section class="main-producer">
 			<div class="main-producer-header">
 				<h2>Популярные производители:</h2>
-				<a href="blank.html">все производители</a>
+				<a class="link-button" href="blank.html">все производители</a>
 			</div>
 			<ul class="main-producer-list">
 				<li class="main-producer-item">
@@ -227,7 +227,7 @@
 					<li class="main-info-text-item">Автотрейдинг</li>
 					<li class="main-info-text-item">ЖелДорЭкспедиция</li>
 				</ul>
-				<a class="main-info-text-link" href="blank.html">Подробнее о компании</a>
+				<a class="link-button" class="main-info-text-link" href="blank.html">Подробнее о компании</a>
 			</div>
 			
 			<div class="main-info-map">
@@ -235,7 +235,7 @@
 				<p>Вы можете забрать товар сами,<br>
                    заехав в наш офис:</p>
 				<a href="blank.html"><img src="img/map.jpeg" width="300" height="158" alt="Карта с нашим адресом"></a>
-				<a href="blank.html">Заблудились? Напишите нам!</a>
+				<a class="link-button" href="blank.html">Заблудились? Напишите нам!</a>
 			</div>
 		</section>
 		
@@ -250,15 +250,15 @@
 				<a href="tel:+78125550555">+7 (812) 555-05-55</a>		
 			</p>
 		<ul class="footer-navigation-list">
-            <li><a href="blank.html">Компания</a></li>
-			<li><a href="blank.html">Новости</a></li>
-            <li><a href="catalog.html">Каталог</a></li>
-            <li><a href="blank.html">Доставка</a></li>
-            <li><a href="blank.html">Контакты</a></li>
-            <li><a href="blank.html">Материалы</a></li>
-			<li><a href="blank.html">Техника</a></li>
-            <li><a href="blank.html">Инструмент</a></li>
-            <li><a href="blank.html">Спецпредложения</a></li>
+            <li class="footer-navigation-item"><a href="blank.html">Компания</a></li>
+			<li class="footer-navigation-item"><a href="blank.html">Новости</a></li>
+            <li class="footer-navigation-item"><a href="catalog.html">Каталог</a></li>
+            <li class="footer-navigation-item"><a href="blank.html">Доставка</a></li>
+            <li class="footer-navigation-item"><a href="blank.html">Контакты</a></li>
+            <li class="footer-navigation-item link-orange"><a href="blank.html">Материалы</a></li>
+			<li class="footer-navigation-item link-orange"><a href="blank.html">Техника</a></li>
+            <li class="footer-navigation-item link-orange"><a href="blank.html">Инструмент</a></li>
+            <li class="footer-navigation-item link-orange"><a href="blank.html">Спецпредложения</a></li>
         </ul>
 	    </nav>
 	
@@ -271,44 +271,44 @@
             <li><a href="#">Инстаграм</a></li>
         </ul>
 	    <p>Обратная связь:
-        <a href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+        <a class="footer-socials-mail link-orange" href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
         </p>
         <p>Разработано -
-        <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+        <a class="footer-socials-copyright link-orange" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
         </p>
 	    </section>
 	
 	</footer>
 	
-	<section>
+	<section class="modal modal-order">
         <h2>Оформить заказ</h2>
         <!-- Здесь будет форма оформления заказа -->
-        <button type="button">Закрыть</button>
+        <button class="modal-close" type="button">Закрыть</button>
     </section>
 
-    <section>
+    <section class="modal modal-authorization">
         <h2>Войти в личный кабинет</h2>
         <p>Введите пожалуйста свой логин и пароль</p>
         <!-- Здесь будет форма логина и пароля -->
-        <button type="button">Закрыть</button>
+        <button class="modal-close" type="button">Закрыть</button>
     </section>
 	
-	<section>
+	<section class="modal modal-account">
         <h2>Создать личный кабинет</h2>
         <!-- Здесь будет форма логина и пароля -->
-        <button type="button">Закрыть</button>
+        <button class="modal-close" type="button">Закрыть</button>
     </section>
 	
-    <section>
+    <section class="modal modal-map">
         <h2>Как до нас добраться</h2>
         <!-- Здесь будет карта -->
-        <button type="button">Закрыть</button>
+        <button class="modal-close" type="button">Закрыть</button>
     </section>
 	
-	<section>
+	<section class="modal modal-question">
         <h2>Здесь Вы можете задать свой вопрос</h2>
         <!-- Здесь будет форма обратной связи -->
-        <button type="button">Закрыть</button>
+        <button class="modal-close" type="button">Закрыть</button>
     </section>
 
   </body>
