--- a/index.html
+++ b/index.html
@@ -2,19 +2,22 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>Интернет-магазин строительных материалов и инструментов для ремонта «Техномарт»</title>
+	<title>Интернет-магазин строительных материалов и инструментов для ремонта «Техномарт»</title>
+	<link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400;1,700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
+	<link href="css/normalize.css" rel="stylesheet">
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body class="page-body">
 
     <header class="header">
 	    <section class="header-section1">
-            <a class="header-logo"><img src="img/index-logo.svg" width="220" height="47" alt="Логотип интернет-магазина «Техномарт»"></a>
+            <a href="#" class="header-logo"></a>
 			<form class="header-search">
-                <p>Поиск:</p><input type="search" name="q">
+                <input type="search" name="q" placeholder="Поиск:">
             </form>
-			<a class="header-link-bookmarks" href="blank.html">Закладки: 0</a>
-			<a class="header-link-basket" href="blank.html">Корзина: 0</a>
-			<a class="header-link-order" href="blank.html">Оформить заказ</a>
+			<a class="header-link-bookmarks" href="#">Закладки: 0</a>
+			<a class="header-link-basket" href="#">Корзина: 0</a>
+			<a class="header-link-order" href="#">Оформить заказ</a>
 		</section>
 		<section class="header-section2">
 		    <p class="header-section2-title">Интернет-магазин
@@ -31,7 +34,7 @@
 		</section>
 		<nav class="header-navigation">	
             <ul class="header-navigation-list">
-                <li><a>Главная</a></li>
+                <li><a href="#">Главная</a></li>
                 <li><a href="blank.html">Компания</a></li>
                 <li><a href="catalog.html">Каталог</a></li>
                 <li><a href="blank.html">Новости</a></li>
@@ -39,7 +42,7 @@
                 <li><a href="blank.html">Доставка</a></li>
                 <li><a href="blank.html">Контакты</a></li>
             </ul>
-       </nav>
+	   </nav>
 	</header>
 	
 	<main class="main">
