написал стили для промо-блока и блока с товарами на главной

--- a/index.html
+++ b/index.html
@@ -53,24 +53,24 @@
 		    <ul class="main-promo-list">
                 <li class="main-promo-item promo-materials">				    
 				    <h2>Материалы</h2>
-					<a href="blank.html">на любой вкус</a>					
+					<div class="main-promo-buttom"><a href="blank.html">на любой вкус</a></div>					
 				</li>
 		        <li class="main-promo-item promo-instrument">				    
 				    <h2>Инструмент</h2>
-					<a href="blank.html">на все случаи</a>					
+					<div class="main-promo-buttom"><a href="blank.html">на все случаи</a></div>						
 				</li>
 				<li class="main-promo-item promo-technic">				    
 				    <h2>Техника</h2>
-					<a href="blank.html">для стройки</a>					
+					<div class="main-promo-buttom"><a href="blank.html">для стройки</a></div>						
 				</li>
 				<li class="main-promo-slider">
 					<input type='radio' id='123' name='123'>
 				    <label for='123'></label>
                     <div class="main-promo-slide">
-					    <h2>..........</h2>
-					    <p>............</p>
-					    <a class="link-button" href="catalog.html">открыть каталог</a>
-						<img src="img/1.svg" width="620" height="266" alt="...............">
+					    <h2>Дрели</h2>
+					    <p>Соседям на радость!</p>
+					    <div  class="link-button"><a href="catalog.html">открыть каталог</a></div>
+						<img src="img/1.svg" width="620" height="266" alt="Фото рабочего с дрелью">
 					</div>
 
 					<input type='radio' id='124' name='124' checked>
@@ -78,17 +78,17 @@
                     <div class="main-promo-slide">
 					    <h2>Перфораторы</h2>
 					    <p>Настоящие мужские игрушки</p>
-					    <a href="catalog.html">открыть каталог</a>
+					    <div  class="link-button"><a href="catalog.html">открыть каталог</a></div>
 						<img src="img/2.svg" width="620" height="266" alt="Фото рабочего с перфоратором">
 					</div>	
 				</li>
 				<li class="main-promo-item promo-sale">				    
 				    <h2>Скидки 50%</h2>
-					<a href="blank.html">на 350 товаров</a>					
+					<div class="main-promo-buttom"><a href="blank.html">на 350 товаров</a></div>					
 				</li>
 				<li class="main-promo-item promo-delivery">				    
 				    <h2>Доставка</h2>
-					<a href="blank.html">бесплатно</a>					
+					<div class="main-promo-buttom"><a href="blank.html">бесплатно</a></div>				
 				</li>
 			</ul>
 		</section>
@@ -96,44 +96,52 @@
 		<section class="main-product">
 			<div class="main-product-header">
 				<h2>Популярные товары:</h2>
-				<a class="link-button" href="blank.html">все популярные товары</a>
+				<div class="link-button"><a class="link-button" href="blank.html">все популярные товары</a></div>
 			</div>
 			<ul class="main-product-list">
 				<li class="main-product-item">
+					<div class="img-product">
+					    <img src="img/3.svg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 9000">
+				    </div>
+					<span>NEW</span>
 					<a class="main-product-item-link" href="blank.html">
-						<img src="img/3.svg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 9000">
-						<span>NEW</span>
 						<h3>Перфоратор BOSCH BFG 9000</h3>
 					</a>
-						<span>32500 Р.</span>
-						<button class="button-product" type="button">25500 Р.</button>					
+						<div class="old-price"><span>32500 Р.</span></div>
+						<div class="button-product"><a href="#">25500 Р.</a></div>					
 				</li>
 				<li class="main-product-item">
-					<a class="main-product-item-link" href="blank.html">
+					<div class="img-product">
 						<img src="img/4.svg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 3000">
-						<span>NEW</span>
+					</div>
+					<span>NEW</span>
+					<a class="main-product-item-link" href="blank.html">
 						<h3>Перфоратор BOSCH BFG 3000</h3>
 					</a>
-						<span>22500 Р.</span>
-						<button class="button-product" type="button">15500 Р.</button>					
+					<div class="old-price"><span>22500 Р.</span></div>
+					<div class="button-product"><a href="#">15500 Р.</a></div>					
 				</li>
 				<li class="main-product-item">
-					<a class="main-product-item-link" href="blank.html">
+					<div class="img-product">
 						<img src="img/5.svg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 6000">
-						<span>NEW</span>
+					</div>
+					<span>NEW</span>
+					<a class="main-product-item-link" href="blank.html">
 						<h3>Перфоратор BOSCH BFG 6000</h3>
 					</a>
-						<span>30500 Р.</span>
-						<button class="button-product" type="button">25500 Р.</button>					
+					<div class="old-price"><span>30500 Р.</span></div>
+					<div class="button-product"><a href="#">25500 Р.</a></div>					
 				</li>
 				<li class="main-product-item">
+					<div class="img-product">
+					    <img src="img/6.svg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 2000">
+				    </div>
+					<span>NEW</span>
 					<a class="main-product-item-link" href="blank.html">
-						<img src="img/6.svg" width="184" height="164" alt="Изображение перфоратора BOSCH BFG 2000">
-						<span>NEW</span>
 						<h3>Перфоратор BOSCH BFG 2000</h3>
 					</a>
-						<span></span>
-						<button class="button-product" type="button">12500 Р.</button>					
+					<div class="old-price"><span></span></div>
+						<div class="button-product"><a href="#">12500 Р.</a></div>					
 				</li>
 			</ul>
 		</section>
@@ -230,7 +238,7 @@
 					<li class="main-info-text-item">Автотрейдинг</li>
 					<li class="main-info-text-item">ЖелДорЭкспедиция</li>
 				</ul>
-				<a class="link-button" class="main-info-text-link" href="blank.html">Подробнее о компании</a>
+				<a class="link-button main-info-text-link" href="blank.html">Подробнее о компании</a>
 			</div>
 			
 			<div class="main-info-map">
