Написал стили для блоков производителей и сервисы на главной

--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
 		<section class="main-product">
 			<div class="main-product-header">
 				<h2>Популярные товары:</h2>
-				<div class="link-button"><a class="link-button" href="blank.html">все популярные товары</a></div>
+				<div class="link-button"><a href="blank.html">все популярные товары</a></div>
 			</div>
 			<ul class="main-product-list">
 				<li class="main-product-item">
@@ -149,7 +149,7 @@
 		<section class="main-producer">
 			<div class="main-producer-header">
 				<h2>Популярные производители:</h2>
-				<a class="link-button" href="blank.html">все производители</a>
+				<div class="link-button"><a class="link-button" href="blank.html">все производители</a></div>
 			</div>
 			<ul class="main-producer-list">
 				<li class="main-producer-item">
@@ -202,7 +202,7 @@
 			
 			<div class="main-services-list">
 				<input type='radio' id='delivery' name='delivery' checked>
-				<label for='delivery'>Доставка</label>
+				<label for='delivery'><div class="index-label">Доставка</div></label>
 				<div class="main-services-item">
 					<h3>Доставка</h3>
 					<p>Мы с удовольствием доставим ваш товар прямо
@@ -212,17 +212,17 @@
 				</div>
 
 				<input type='radio' id='guarantee' name='guarantee'>
-				<label for='guarantee'>Гарантия</label>
+				<label for='guarantee'><div class="index-label">Гарантия</div></label>
 				<div class="main-services-item">
 					<h3>Гарантия</h3>
-					<p></p>
+					<p>Гггггггггггггггггггггггггггггг</p>
 				</div>
 
 				<input type='radio' id='credit' name='credit'>
-				<label for='credit'>Кредит</label>
+				<label for='credit'><div class="index-label">Кредит</div></label>
 				<div class="main-services-item">
 					<h3>Кредит</h3>
-					<p></p>
+					<p>Ккккккккккккккккккккккккккккккк</p>
 				</div>
 			</div>
 		</section>
