закончил стили главной страницы

--- a/index.html
+++ b/index.html
@@ -266,10 +266,10 @@
             <li class="footer-navigation-item"><a href="catalog.html">Каталог</a></li>
             <li class="footer-navigation-item"><a href="blank.html">Доставка</a></li>
             <li class="footer-navigation-item"><a href="blank.html">Контакты</a></li>
-            <li class="footer-navigation-item link-orange"><a href="blank.html">Материалы</a></li>
-			<li class="footer-navigation-item link-orange"><a href="blank.html">Техника</a></li>
-            <li class="footer-navigation-item link-orange"><a href="blank.html">Инструмент</a></li>
-            <li class="footer-navigation-item link-orange"><a href="blank.html">Спецпредложения</a></li>
+            <li class="footer-navigation-item"><a class="link-orange" href="blank.html">Материалы</a></li>
+			<li class="footer-navigation-item"><a class="link-orange" href="blank.html">Техника</a></li>
+            <li class="footer-navigation-item"><a class="link-orange" href="blank.html">Инструмент</a></li>
+            <li class="footer-navigation-item"><a class="link-orange" href="blank.html">Спецпредложения</a></li>
         </ul>
 	    </nav>
 	
@@ -277,15 +277,15 @@
 	    <p>© 2010–2019 Компания «Техномарт»
 		   Все права защищены</p>
 		<ul class="footer-socials-list">
-            <li><a href="#">Вконтакте</a></li>
-            <li><a href="#">Фейсбук</a></li>
-            <li><a href="#">Инстаграм</a></li>
+            <li><a href="#"><img class="logo-socials" src="img/icon-vk.png" width="27" height="16" alt="Логотип ВКонтакте"></a></li>
+            <li><a href="#"><img class="logo-socials" src="img/icon-fb.png" width="12" height="22" alt="Логотип Фейсбук"></a></li>
+            <li><a href="#"><img class="logo-socials" src="img/icon-insta.png" width="21" height="21" alt="Логотип Инстаграмм"></a></li>
         </ul>
 	    <p>Обратная связь:
-        <a class="footer-socials-mail link-orange" href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+        <a class="footer-socials-link link-orange" href="mail@htmlacademy.ru">mail@htmlacademy.ru</a>
         </p>
         <p>Разработано -
-        <a class="footer-socials-copyright link-orange" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+        <a class="footer-socials-link link-orange" href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
         </p>
 	    </section>
 	
