--- a/catalog.html
+++ b/catalog.html
@@ -9,34 +9,31 @@
   </head>
   <body>
 
-    <header>
-	    <section>
-            <a href="index.html"><img src="img/index-logo.svg" width="220" height="47" alt="Логотип интернет-магазина «Техномарт»"></a>
-			<form>
-                <p>Поиск:</p><input type="search" name="q">
+    <header class="header">
+	    <section class="header-section1">
+            <a href="index.html" class="header-logo"></a>
+			<form class="header-search">
+                <input type="search" name="q" placeholder="Поиск:">
             </form>
-			<a href="blank.html">Закладки: 0</a>
-			<a href="blank.html">Корзина: 10</a>
-			<a href="blank.html">Оформить заказ</a>
+			<a class="header-link-bookmarks" href="#">Закладки: 0</a>
+			<a class="header-link-basket" href="#">Корзина: 10</a>
+			<a class="header-link-order" href="#">Оформить заказ</a>
 		</section>
-		<section>
-		    <p>Интернет-магазин
+		<section class="header-section2">
+		    <p class="header-section2-title">Интернет-магазин
 			   строительных материалов
 			   и инструментов для ремонта</p>
-			<p>
-			    <a href="tel:+78125550555">+7 (812) 555-05-55</a>
+			<p class="header-section2-contacts">
+			    <a class="header-section2-tel" href="tel:+78125550555">+7 (812) 555-05-55</a>
 				г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
 			</p>
-			<div>
-			    <img src="img/avatar.svg" width="20" height="18" alt="Аватарка клиента">
-			    <p>Равшан Джамшутович</p>
-			    <a href="blank.html"></a>
-			    <a href="blank.html">Мои заказы</a>
-			    <a href="blank.html">Личный кабинет</a>
+			<div class="header-section2-authorization">
+			<a class="header-section2-login-link" href="blank.html">Вход</a>
+			<a class="header-section2-reg-link" href="blank.html">Регистрация</a>
 			</div>
 		</section>
-		<nav>	
-            <ul>
+		<nav class="header-navigation">	
+            <ul class="header-navigation-list">
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="blank.html">Компания</a></li>
                 <li><a href="catalog.html">Каталог</a></li>
@@ -45,7 +42,7 @@
                 <li><a href="blank.html">Доставка</a></li>
                 <li><a href="blank.html">Контакты</a></li>
             </ul>
-       </nav>
+	   </nav>
 	</header>
 	
 	<main>
