добавил стили модальному окну с картой

--- a/index.html
+++ b/index.html
@@ -310,10 +310,9 @@
         <button class="modal-close" type="button">Закрыть</button>
     </section>
 	
-    <section class="modal modal-map">
-		<h2>Как до нас добраться</h2>
-        <!-- Здесь будет карта -->
-        <button class="modal-close" type="button">Закрыть</button>
+    <section class="modal-map">
+		<img src="img/map.png" width="1736" height="779" alt="Карта с нашим адресом">
+        <a href="#" class="close"><img src="img/icon-close.svg" width="21" height="21" alt="закрыть"></a>
     </section>
 	
 	<section class="modal-question">
