--- a/index.html
+++ b/index.html
@@ -291,28 +291,33 @@
 	
 	</footer>
 	
-	<section class="modal modal-order">
-        <h2>Оформить заказ</h2>
-        <!-- Здесь будет форма оформления заказа -->
-        <button class="modal-close" type="button">Закрыть</button>
+	<section class="modal-order">
+        <p>Товар добавлен в корзину!</p>
+        <div class="submit-order">
+			<div class="link-button"><a href="#">ОФОРМИТЬ ЗАКАЗ</a></div>
+			<div class="button-white"><a href="#">ПРОДОЛЖИТЬ ПОКУПКИ</a></div>
+		</div>
+        <a href="#" class="close"><img src="img/icon-close.svg" width="21" height="21" alt="закрыть"></a>
     </section>
 
     <section class="modal modal-authorization">
         <h2>Войти в личный кабинет</h2>
         <p>Введите пожалуйста свой логин и пароль</p>
         <!-- Здесь будет форма логина и пароля -->
-        <button class="modal-close" type="button">Закрыть</button>
+        <a href="#" class="close"><img src="img/icon-close.svg" width="21" height="21" alt="закрыть"></a>
     </section>
 	
 	<section class="modal modal-account">
         <h2>Создать личный кабинет</h2>
         <!-- Здесь будет форма логина и пароля -->
-        <button class="modal-close" type="button">Закрыть</button>
+        <a href="#" class="close"><img src="img/icon-close.svg" width="21" height="21" alt="закрыть"></a>
     </section>
 	
     <section class="modal-map">
+
 		<img src="img/map.png" width="1736" height="779" alt="Карта с нашим адресом">
-        <a href="#" class="close"><img src="img/icon-close.svg" width="21" height="21" alt="закрыть"></a>
+		<a href="#" class="close"><img src="img/icon-close.svg" width="21" height="21" alt="закрыть"></a>
+		
     </section>
 	
 	<section class="modal-question">
