исправил ошибку после валидатора

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <header class="header">
 	    <section class="header-section1">
-            <a href="#" class="header-logo"></a>
+            <div class="header-logo"></div><a href="#"></a>
 			<form class="header-search">
                 <input type="search" name="q" placeholder="Поиск:">
             </form>
@@ -201,8 +201,10 @@
 				Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
 			
 			<div class="main-services-list">
-				<input type='radio' id='delivery' name='delivery' checked>
-				<label for='delivery'><div class="index-label">Доставка</div></label>
+				<div class="index-label">
+					<input type='radio' id='delivery' name='delivery' checked>
+					<label for='delivery'>Доставка</label>
+				</div>
 				<div class="main-services-item">
 					<h3>Доставка</h3>
 					<p>Мы с удовольствием доставим ваш товар прямо
@@ -211,15 +213,19 @@
 						поднимая его на ваш этаж!</p>
 				</div>
 
-				<input type='radio' id='guarantee' name='guarantee'>
-				<label for='guarantee'><div class="index-label">Гарантия</div></label>
+				<div class="index-label">
+				    <input type='radio' id='guarantee' name='guarantee'>
+					<label for='guarantee'>Гарантия</label>
+				</div>
 				<div class="main-services-item">
 					<h3>Гарантия</h3>
 					<p>Гггггггггггггггггггггггггггггг</p>
 				</div>
 
-				<input type='radio' id='credit' name='credit'>
-				<label for='credit'><div class="index-label">Кредит</div></label>
+				<div class="index-label">
+				    <input type='radio' id='credit' name='credit'>
+					<label for='credit'>Кредит</label>
+				</div>
 				<div class="main-services-item">
 					<h3>Кредит</h3>
 					<p>Ккккккккккккккккккккккккккккккк</p>
