Внес правки, переименовал некоторые классы

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html class="page" lang="ru">
   <head>
     <meta charset="utf-8">
-	<title>Интернет-магазин строительных материалов и инструментов для ремонта «Техномарт»</title>
+	<title>Каталог строительных материалов и инструментов для ремонта «Техномарт»</title>
 	<link href="https://fonts.googleapis.com/css2?family=Cuprum:ital,wght@0,400;0,700;1,400;1,700&family=PT+Sans:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 	<link href="css/normalize.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
@@ -10,8 +10,8 @@
   <body class="page-body">
 
     <header class="header">
-	    <section class="header-section1">
-            <div class="header-logo"></div><a href="#"></a>
+	    <section class="header-section-logo">
+            <div class="header-logo"><a href="#"></a></div>
 			<form class="header-search">
                 <input type="search" name="q" placeholder="Поиск:">
             </form>
@@ -19,17 +19,17 @@
 			<a class="header-link-basket" href="#">Корзина: 0</a>
 			<a class="header-link-order" href="#">Оформить заказ</a>
 		</section>
-		<section class="header-section2">
-		    <p class="header-section2-title">Интернет-магазин
+		<section class="header-section-centr">
+		    <p class="header-section-centr-title">Интернет-магазин
 			   строительных материалов
 			   и инструментов для ремонта</p>
-			<p class="header-section2-contacts">
-			    <a class="header-section2-tel" href="tel:+78125550555">+7 (812) 555-05-55</a>
+			<p class="header-section-centr-contacts">
+			    <a class="header-section-centr-tel" href="tel:+78125550555">+7 (812) 555-05-55</a>
 				г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
 			</p>
-			<div class="header-section2-authorization">
-			<a class="header-section2-login-link" href="blank.html">Вход</a>
-			<a class="header-section2-reg-link" href="blank.html">Регистрация</a>
+			<div class="header-section-centr-authorization">
+			<a class="header-section-centr-login-link" href="blank.html">Вход</a>
+			<a class="header-section-centr-reg-link" href="blank.html">Регистрация</a>
 			</div>
 		</section>
 		<nav class="header-navigation">	
