--- a/catalog.html
+++ b/catalog.html
@@ -10,8 +10,8 @@
   <body>
 
     <header class="header">
-	    <section class="header-section1">
-            <a href="index.html" class="header-logo"></a>
+	    <section class="header-section-logo">
+            <div class="header-logo"><a href="index.html"></a></div>
 			<form class="header-search">
                 <input type="search" name="q" placeholder="Поиск:">
             </form>
@@ -19,17 +19,17 @@
 			<a class="header-link-basket" href="#">Корзина: 10</a>
 			<a class="header-link-order" href="#">Оформить заказ</a>
 		</section>
-		<section class="header-section2">
-		    <p class="header-section2-title">Интернет-магазин
+		<section class="header-section-centr">
+		    <p class="header-section-centr-title">Интернет-магазин
 			   строительных материалов
 			   и инструментов для ремонта</p>
-			<p class="header-section2-contacts">
-			    <a class="header-section2-tel" href="tel:+78125550555">+7 (812) 555-05-55</a>
+			<p class="header-section-centr-contacts">
+			    <a class="header-section-centr-tel" href="tel:+78125550555">+7 (812) 555-05-55</a>
 				г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
 			</p>
-			<div class="header-section2-authorization">
-			<a class="header-section2-login-link" href="blank.html">Вход</a>
-			<a class="header-section2-reg-link" href="blank.html">Регистрация</a>
+			<div class="header-section-centr-authorization">
+			<a class="header-section-centr-login-link" href="blank.html">Вход</a>
+			<a class="header-section-centr-reg-link" href="blank.html">Регистрация</a>
 			</div>
 		</section>
 		<nav class="header-navigation">	
